set body classes to background-color, set an empty dev the same size as the footer at the bottom of the page to avoid overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -345,23 +345,16 @@ body {
     }
 }
 
-
-/* ########## re-usable id's and classes accross excercise pages ##########  */
-
-
-
 /* ########## CHEST ########## */
 
 /* background */
 
-.chest-background-blue {
+.body-blue {
     background-color: #004AAD;
-    width: 100%;
-    height: 80rem;
+}
 
-    position: absolute;
-    top: 0px;
-    z-index: -1;
+.body-orange {
+    background-color: #FA7C07;
 }
 
 /* chest top section */
@@ -468,16 +461,6 @@ body {
         font-size: 200%;
     }
 
-    .chest-background-blue {
-        background-color: #004AAD;
-        width: 100%;
-        height: 96rem;
-    
-        position: absolute;
-        top: 0px;
-        z-index: -1;
-    }
-
 }
 
 /* chest exercise section */
@@ -487,7 +470,7 @@ body {
 #chest-exercises {
     margin: 40px 0 0 0;
     width: 100%;
-    height: 35rem;
+    /* height: 35rem; */
 
     display: flex;
     flex-direction: column;
@@ -609,7 +592,7 @@ body {
 
     margin-top: 20px;
     width: 100%;
-    height: 260px;
+    height: 60px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -654,6 +637,23 @@ body {
 
 .call-to-action-muscle-pages a:hover {
     color: #FA7C07;
+}
+
+
+/* footer-spacing div */
+
+.footer-spacing {
+    height: 120px;
+    width: 100%;
+    margin-top: 20px;
+    background-color: red;
+}
+
+@media only screen and (max-width: 500px) {
+    
+    .footer-spacing {
+        height: 90px;    
+    }
 }
 
 /* ########## SHOULDERS ########## */
